always show y scroll to prevent page shift

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ div.scrollBox {
   right: 0;
   top: 0;
   min-height: 100vh;
-  overflow: auto;
+  overflow-y: scroll;
 }
 
 div.scrollPadding {
